--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,3 +1,2 @@
 all:
-	g++ -std=c++11 -o data_cleaner main.cpp data_cleaner_manual.cpp models/Bitcoin.cpp models/Day.cpp
-	./data_cleaner
+	g++ -std=c++11 -o driver driver.cpp log_reg.cpp data_cleaner_manual.cpp models/Bitcoin.cpp models/Day.cpp
