--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "data_cleaner"
+name = "rust"
 version = "0.1.0"
-authors = ["Christian Lei <christian.lei@flysfo.com>"]
+authors = ["Christian Lei <christian.lei@flysfo.com> jrodr104 <jrodr104@ucsc.edu>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 chrono = "0.4.19"
+rand = "0.8.0"
